@@ -1,0 +1,3 @@
+module ExtraEndBrace where
+
+data A = B {c :: D}}
