@@ -2,3 +2,4 @@ GADTRecord.hs		GADT records not yet supported.
 DoRec.hs		DoRec not yet supported.
 CStyleLinePragmas.hs	Shouldn't succeed. HSE does not and will not support C-style line pragmas.
 QuasiQuoteSplice.hs	Splicing inside quasi-quotes fails
+ExtraEndBrace.hs	Should fail - but gracefully
